# zmwn

./: .gitignore  CMakeLists.txt  Makefile
src/file/: CMakeLists.txt  Makefile  io.c
src/include/: device.h  file.h  initializer.h  logger.h  monitoring.h
src/logger/: Makefile  logger.c
src/master/: CMakeLists.txt  Makefile  initializer.c
src/monitoring/: monitoring.c
src/test/: CMakeLists.txt  Makefile  initialize.c
